Fixes minor formatting issues and moves pencil image so it is more visible

--- a/pencil/css/styles.css
+++ b/pencil/css/styles.css
@@ -8,6 +8,7 @@ html {
 * {
   box-sizing: border-box; /* include padding and border is size calcs */
 }
+
 /* selects all div class="container" elements  */
 .container {
   padding-left: 0.5em;
@@ -16,6 +17,20 @@ html {
   max-width: 1170px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 2rem;
+}
+
+/* formats header with image and font color  */
+header {
+  background-position: center;
+  background: linear-gradient(45deg, #3e1305, #8a2811);
+  background-size: cover;
+  background-origin: border-box;
+  background-position: auto;
+  justify-content: center;
+  margin: 0;
+  padding-top: 1px;
+  color: white;
 }
 
 /* removes bulleting from list */
@@ -26,27 +41,16 @@ ul {
   padding: 0;
 }
 
-/* formats header with image and font color  */
-header {
-  background-position: center;
-  background: linear-gradient(#3e1305, #8a2811);
-  background-size: cover;
-  background-origin: border-box;
-  background-position: auto;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  color: white;
-}
-
 h1 {
   font-weight: 300;
   font-size: 3rem;
+  padding-bottom: 0;
 }
 
 .tagline {
   font-weight: 300;
-  max-width: 50%; /* will always compare to parent element */
+  max-width: 80%; /* will always compare to parent element */
+  padding-bottom: 30px;
 }
 
 /* rules that apply only to screens 768 pixels and wider */
@@ -56,11 +60,10 @@ h1 {
   }
   header {
     background-image: url(../images/angelina-litvin-32188-unsplash.jpg); /* use background image on larger screens */
-    background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: bottom right;
     background-size: cover;
     padding-top: 100px;
+    padding-bottom: 10px;
     color: black;
     font-size: 5rem; /* increase font size to 18 pixels on larger screens */
   }
@@ -163,8 +166,8 @@ li {
 footer {
   background-color: #3e1305;
   color: white;
-  padding-top: 0.5rem;
-  padding-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: -2rem;
   margin-top: -1rem;
   margin-bottom: 5rem;
 }
